# SequentialBoids

./: .gitignore  Cargo.toml  README.md  bench.json  commands used.txt  noticable_params.json  params.json  reference_data.json
Benchmarks/: 1200_boids_benchmark.json  200_boids_benchmark.json  600_boids_benchmark.json
PSchedules/: 1200_params.json  200_params.json  600_params.json
Recordings/: 1200_boids.json  200_boids.json  600_boids.json
src/: components.rs  constants.rs  main.rs  resources.rs  systems.rs
