[package]
name = "bevy-boids"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { path = "/bevy" }  # Adjust this path to point to your local Bevy repository
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3