[package]
name = "bevy-boids"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
rand = "0.8.5"
noise = "0.9"
rand_chacha = "0.3.1"
clap = "4.5.20"
serde = "1.0.213"
serde_json = "1.0.132"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3